# whatday

./: Cargo.toml
src/: main.rs  months.rs
