[package]
name = "whatday"
version = "0.1.0"
edition = "2021"
authors = ["Nickoehler <grillinicolavocal@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"]}
scraper = "*"
chrono = "*"
phf = "*"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
strip = true        # Strip all symbols from the binary.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
